<resources>
    <string name="app_name">CoffeePointApp</string>
    <string name="title_map">Карта</string>
    <string name="title_points">Мои Точки</string>
    <string name="title_profile">Профиль</string>
    <string name="title_other">Другое</string>
    <string name="title_point_edit">Редактировать Точку</string>
    <string name="title_profile_edit">Редактировать профиль</string>
    <string name="title_log_in">Вход</string>
    <string name="point_status_true">Открыта</string>
    <string name="point_status_false">Закрыта</string>
    <string name="maps_key">YOUR_API_KEY</string>
    <string name="new_point_tv_text">Новая точка</string>
    <string name="point_name_hint">Название точки</string>
    <string name="point_about_hint">Краткое описание точки</string>
    <string name="visible_point_tv_text">На Смене</string>
    <string name="invisible_point_tv_text">Не на Смене</string>
    <string name="auth_instruction_tv_num_text">Введите Ваш номер телефона, на который мы отправим код подтверждения</string>
    <string name="auth_instruction_tv_code_text">Введите код, который мы отправили на номер:</string>
    <string name="sms_code_ed_text">Код из смс</string>
    <string name="phone_number_ed_text">Номер телефона</string>
    <string name="first_credentials_error_text">Что-то пошло не так, отправьте код снова</string>
    <string name="user_name_text">Имя Профиля</string>
    <string name="user_name_ed_text">Имя профиля</string>
    <string name="user_name_tv_null_text">Не указано</string>
    <string name="new_user_name_text">Новое Имя</string>
    <string name="user_about_hint">О себе</string>
    <string name="product_list_tv_text">Ваш Ассортимент</string>
    <string name="map_point_products_tv_text">Ассортимент:</string>
    <string name="point_product_null">У данной точки нет продуктов</string>
    <string name="point_null">Никого...</string>
    <string name="point_name_null">Имя Не Указано</string>
    <string name="point_update_success">Имя точки успешно обновлено</string>
    <string name="request_code_btn_text">Далее</string>
    <string name="log_in_btn">Войти</string>
    <string name="add_product_btn">Добавить</string>
    <string name="add_product_text">Новый Товар</string>
    <string name="add_product_ed_text">Название товара</string>
    <string name="save_btn">Сохранить</string>
    <string name="cancel_btn">Отмена</string>
    <string name="delete_btn">Удалить</string>
    <string name="edit_btn">Изменить</string>
    <string name="void_btn">Назад</string>
    <string name="about_app">О приложении</string>
    <string name="exit">Выйти</string>
    <string name="exit_dialog_title">Выйти?</string>
    <string name="delete_dialog_title">Удалить?</string>
    <string name="exit_dialog_message">Вы уверены, что хотите выйти из приложения?</string>
    <string name="delete_product_dialog_message">Вы уверены, что хотите удалить этот продукт?</string>
    <string name="delete_point_dialog_message">Вы уверены, что хотите удалить эту точку?</string>
    <string name="dialog_positive_btn">Да</string>
    <string name="dialog_negative_btn">Нет</string>
    <string name="about_app_content">Разная супер важная информация, которую я ещё не придумал.</string>
    <string name="authorization_header">Authorization</string>
    <string name="ononoki_chan">Yay! Peace! Peace!</string>
    <string name="shinobu_chan">Ka Ka Ka!</string>
    <string name="mayoi_chan">Shitsurei! Kamimashita!</string>
</resources>
